--- a/index.html
+++ b/index.html
@@ -10,15 +10,27 @@
     <link href="livestant.css" rel="stylesheet" />
 </head>
 <body>
-    てsつと
-    <script src="http://cdn.mlkcca.com/v2.0.0/milkcocoa.js"></script>
+    <div class="header">
+
+        <a href="http://simiraaaa.github.io/livestant/">
+            <h1 class="logo">Livestant <span style="color:white;font-size:0.6em;">prototype</span></h1>
+        </a>
+
+        <span class="createButton">+</span>
+
+    </div>
+
+    <div class="rooms">
+
+    </div>
+
+    <span class="message"></span>
+
     <script src="https://cdn.rawgit.com/simiraaaa/iroirojs/gh-pages/smr/smr.js"></script>
     <script src="https://cdn.rawgit.com/simiraaaa/iroirojs/gh-pages/smr/smr.util.js"></script>
     <script src="https://cdn.rawgit.com/simiraaaa/iroirojs/gh-pages/smr/smr.ajax.js"></script>
-    <script src="https://cdn.rawgit.com/simiraaaa/iroirojs/gh-pages/smr/smr.google.js"></script>
     <script src="https://cdn.rawgit.com/simiraaaa/iroirojs/gh-pages/smr/smr.dom.js"></script>
     <script src="livestant.js"></script>
     <script src="index.js"></script>
-    <script>alert(1);</script>
 </body>
 </html>
