--- a/view.html
+++ b/view.html
@@ -74,7 +74,7 @@
             },
             function (e) {
                 toTop(e);
-            });
+            }, {id:LIVE_ID,look:LOOK_PASS});
 
 
             function toTop(m) {
