--- a/view.html
+++ b/view.html
@@ -65,14 +65,12 @@
             var dataStore = milkcocoa.dataStore(SENDTO);
             dataStore.on('send', function (data) {
                 var url = GOOGL + data.value.url;
-                frame.src = url;
-                frame.appendTo();
+                frame.element.src = url;
             });
             
             livestant.getRoomUrl(function (res) {
                 var url = GOOGL + res.url;
                 frame.element.src = url;
-                console.log(url);
                 frame.appendTo();
             },
             function (e) {
