--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, user-scalable=no" />
+    <link href="favicon.ico" rel="shortcut icon" type="image/x-icon" />
 
     <title>livestant | top</title>
     <meta name="description" content="livestant runstant でライブコーディングっぽいことができます。PCで書いてすぐにスマホで見たい時などに使えます。 runstant はtmlib.jsの公式エディタです。" />
