--- a/view.html
+++ b/view.html
@@ -7,6 +7,7 @@
 
     <title>livestant | view</title>
     <meta name="description" content="livestant view 閲覧" />
+    <link href="favicon.ico" rel="shortcut icon" type="image/x-icon" />
     <style>
         html {
             width: 100%;
