keydown enter to button click. and if room nothing, replace URL query parameter url value.

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         </a>
 
         <span class="createButton">+</span>
+        <span id="help" class="createButton" style="left:80%;">?</span>
 
     </div>
 
