--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, user-scalable=no" />
     <link href="favicon.ico" rel="shortcut icon" type="image/x-icon" />
 
-    <title>livestant | top</title>
+  <script src="/ga.js"></script>
+    <title>top page | livestant</title>
     <meta name="description" content="livestant runstant でライブコーディングっぽいことができます。PCで書いてすぐにスマホで見たい時などに使えます。 runstant はtmlib.jsの公式エディタです。" />
     <link href="livestant.css" rel="stylesheet" />
 </head>
