--- a/view.html
+++ b/view.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, user-scalable=no" />
-
-    <title>livestant | view</title>
+  <script src="/ga.js"></script>
+    <title>viewer | livestant</title>
     <meta name="description" content="livestant view 閲覧" />
     <link href="favicon.ico" rel="shortcut icon" type="image/x-icon" />
     <style>
